manifest/cem/dev/ingress/cem-console.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-cem-console
  namespace: dev
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/client-body-buffer-size: 10m
    nginx.ingress.kubernetes.io/proxy-body-size: 1024m
    nginx.ingress.kubernetes.io/server-snippet: |
      access_log /var/log/nginx/consolecs.cempro.cn.access.log;
      error_log /var/log/nginx/consolecs.cempro.cn.error.log;
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - consolecs.cempro.cn
    secretName: cempro.cn-certs
  rules:
  - host: consolecs.cempro.cn
    http:
      paths:
      - path: /console/
        pathType: Prefix
        backend:
          service:
            name: cem-console
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cem-console-web
            port:
              number: 80
...
