manifest/cem/dev/ingress/cem.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-cem
  namespace: dev
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/client-body-buffer-size: 10m
    nginx.ingress.kubernetes.io/proxy-body-size: 1024m
    nginx.ingress.kubernetes.io/server-snippet: |
      access_log /var/log/nginx/xxxxxxx.access.log;
      error_log /var/log/nginx/xxxxxxx.error.log;
      location = / {
          rewrite ^/(.*)$ https://xxxxxxx/website/$1 permanent;
      }
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - xxxxxxxx
    secretName: cempro.cn-certs
  rules:
  - host: xxxxxxxx
    http:
      paths:
      - path: /website
        pathType: Prefix
        backend:
          service:
            name: cem-website
            port:
              number: 80
      - path: /a/
        pathType: Prefix
        backend:
          service:
            name: cem-answer-web
            port:
              number: 80
      - path: /child/answer
        pathType: Prefix
        backend:
          service:
            name: cem-answer-web
            port:
              number: 80
      - path: /child/dashboard
        pathType: Prefix
        backend:
          service:
            name: cem-dashboard-web
            port:
              number: 80
      - path: /h5/
        pathType: Prefix
        backend:
          service:
            name: cem-h5
            port:
              number: 80
      - path: /library
        pathType: Prefix
        backend:
          service:
            name: cem-library
            port:
              number: 80
      - path: /child/survey
        pathType: Prefix
        backend:
          service:
            name: cem-survey-web
            port:
              number: 80
      - path: /child/new-survey
        pathType: Prefix
        backend:
          service:
            name: cem-new-survey-web
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cem-main
            port:
              number: 80
  defaultBackend:
    service:
      name: cem-website
      port:
        number: 80
...
